Bug 361366, problems with xf:repeat in anonymous content, r=aaronr+doronr